src/trusted/validator_arm/testdata/bad/invalid_math_to_sp.dis
       0:	e081d003 		add	sp, r1, r3
       4:	e0800000 		add	r0, r0, r0
